# ai-model-proxy-router

./: .env.example  .gitconfig  .gitignore  .user_env  README.md  ai_model_proxy_design.md  config.yaml.example  curl_api_usage.sh  example_api_usage.py  pyproject.toml  requirements.txt
.browser_data_dir/: Local State  SingletonCookie  SingletonLock  SingletonSocket
.browser_data_dir/Default/: Cookies  DIPS-wal  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
.browser_data_dir/Default/DawnGraphiteCache/: index
.browser_data_dir/Default/DawnWebGPUCache/: index
.browser_data_dir/Default/Extension Rules/: LOG
.browser_data_dir/Default/Extension Scripts/: LOG
.browser_data_dir/GrShaderCache/: index
.browser_data_dir/GraphiteDawnCache/: index
.browser_data_dir/ShaderCache/: index
.browser_data_dir/component_crx_cache/: metadata.json
.config/gh/: hosts.yml
.config/state-sync/: state-sync-config.yaml
.github/workflows/: ci.yml
.secrets/: sandbox_api_token
ai_model_proxy/: __init__.py  main.py
ai_model_proxy/config/: manager.py  schema.py
ai_model_proxy/core/: __init__.py  analyzer.py  manager.py  router.py
ai_model_proxy/models/: __init__.py  llm_metadata.py
ai_model_proxy/providers/: base.py  openai_adapter.py
ai_model_proxy/security/: __init__.py  auth.py  guardrails.py
ai_model_proxy/services/: cache.py  observability.py  reliability.py
docs/: enterprise-roadmap.md  routing-signals.md
skills/: .skill_versions.json
tests/: test_guardrails.py  test_router.py
upload/: pasted_content.txt
(+44 files in other folders)
